Added insert note capability