@@ -1,7 +1,6 @@
 package org.ecsail.mvci.membership.components;
 
 import javafx.beans.property.SimpleStringProperty;
-import javafx.collections.FXCollections;
 import javafx.geometry.Insets;
 import javafx.scene.Node;
 import javafx.scene.control.*;
@@ -10,7 +9,7 @@ import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
 import javafx.util.Builder;
-import org.ecsail.fx.NotesFx;
+import org.ecsail.fx.NoteFx;
 import org.ecsail.mvci.membership.MembershipMessage;
 import org.ecsail.mvci.membership.MembershipModel;
 import org.ecsail.mvci.membership.MembershipView;
@@ -23,12 +22,10 @@ import java.util.Arrays;
 public class NotesTabView implements Builder<Tab> {
     private final MembershipView membershipView;
     private final MembershipModel membershipModel;
-    private Button addButton;
-    private Button deleteButton;
     private Button editButton;
     private Button saveButton;
     private Button cancelButton;
-    private TableView<NotesFx> tableView;
+    private TableView<NoteFx> tableView;
 
     public NotesTabView(MembershipView membershipView) {
         this.membershipView = membershipView;
@@ -49,8 +46,8 @@ public class NotesTabView implements Builder<Tab> {
 
     private Node getButtonControls() {
         VBox vBox = VBoxFx.vBoxOf(5.0, new Insets(10, 5, 0, 5));
-        this.addButton = ButtonFx.buttonOf("Add", 60, this::insertNote);
-        this.deleteButton = ButtonFx.buttonOf("Delete", 60, this::deleteNote);
+        Button addButton = ButtonFx.buttonOf("Add", 60, this::insertNote);
+        Button deleteButton = ButtonFx.buttonOf("Delete", 60, this::deleteNote);
         this.editButton = ButtonFx.buttonOf("Edit", 60, this::editNote);
         this.saveButton = ButtonFx.buttonOf("Save", 60, this::saveNote);
         this.cancelButton = ButtonFx.buttonOf("Cancel", 60, this::cancelEdit);
@@ -70,8 +67,8 @@ public class NotesTabView implements Builder<Tab> {
         ButtonFx.buttonVisible(editButton, true);
         ButtonFx.buttonVisible(saveButton, false);
         ButtonFx.buttonVisible(cancelButton, false);
-        tableView.getColumns().remove(0);
-        tableView.getColumns().add(0,col1());
+        tableView.getColumns().removeFirst();
+        tableView.getColumns().addFirst(col1());
     }
 
     private void saveNote() {
@@ -81,8 +78,8 @@ public class NotesTabView implements Builder<Tab> {
         ButtonFx.buttonVisible(editButton, true);
         ButtonFx.buttonVisible(saveButton, false);
         ButtonFx.buttonVisible(cancelButton, false);
-        tableView.getColumns().remove(0);
-        tableView.getColumns().add(0,col1());
+        tableView.getColumns().removeFirst();
+        tableView.getColumns().addFirst(col1());
     }
 
     private void editNote() {
@@ -90,12 +87,13 @@ public class NotesTabView implements Builder<Tab> {
         ButtonFx.buttonVisible(editButton, false);
         ButtonFx.buttonVisible(saveButton, true);
         ButtonFx.buttonVisible(cancelButton, true);
-        tableView.getColumns().remove(0);
-        tableView.getColumns().add(0,editCol());
+        tableView.getColumns().removeFirst();
+        tableView.getColumns().addFirst(editCol());
     }
 
     private void insertNote() {
         membershipView.sendMessage().accept(MembershipMessage.INSERT_NOTE);
+        editNote();
     }
 
     private void deleteNote() {
@@ -120,7 +118,7 @@ public class NotesTabView implements Builder<Tab> {
         this.tableView = TableViewFx.tableViewOf(200,false);
         tableView.setItems(membershipView.getMembershipModel().membershipProperty().get().getMemos());
         tableView.getColumns().addAll(Arrays.asList(col1(), col2()));
-        TableView.TableViewSelectionModel<NotesFx> selectionModel = tableView.getSelectionModel();
+        TableView.TableViewSelectionModel<NoteFx> selectionModel = tableView.getSelectionModel();
         selectionModel.selectedItemProperty().addListener((obs, oldSelection, newSelection) -> {
             if (newSelection != null) {
                 membershipModel.setSelectedNote(newSelection);
@@ -138,16 +136,16 @@ public class NotesTabView implements Builder<Tab> {
         return tableView;
     }
 
-    private TableColumn<NotesFx, String> col2() {
-        TableColumn<NotesFx, String> col = new TableColumn<>("Type");
+    private TableColumn<NoteFx, String> col2() {
+        TableColumn<NoteFx, String> col = new TableColumn<>("Type");
         col.setCellValueFactory(new PropertyValueFactory<>("category"));
         col.setPrefWidth(60); // Reasonable preferred width
         col.setMaxWidth(60); // Type
         return col;
     }
 
-    private TableColumn<NotesFx, String> col1() {
-        TableColumn<NotesFx, String> col = new TableColumn<>("Date");
+    private TableColumn<NoteFx, String> col1() {
+        TableColumn<NoteFx, String> col = new TableColumn<>("Date");
         col.setCellValueFactory(cellData -> {
             LocalDate date = cellData.getValue().getMemoDate();
             return new SimpleStringProperty(date != null ? date.format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) : "");
@@ -157,13 +155,11 @@ public class NotesTabView implements Builder<Tab> {
         return col;
     }
 
-    private TableColumn<NotesFx, LocalDate> editCol() {
-        TableColumn<NotesFx, LocalDate> col = new TableColumn<>("Date");
+    // when edit button is pressed this is the row that shows
+    private TableColumn<NoteFx, LocalDate> editCol() {
+        TableColumn<NoteFx, LocalDate> col = new TableColumn<>("Date");
         col.setCellValueFactory(cellData -> cellData.getValue().memoDateProperty());
-        col.setCellFactory(CallBackFX.createDatePickerCellFactory(notesDTO -> {
-            membershipModel.setSelectedNote(notesDTO);
-//            membershipView.sendMessage().accept(MembershipMessage.UPDATE_NOTE);
-        }));
+        col.setCellFactory(CallBackFX.createDatePickerCellFactory(membershipModel::setSelectedNote));
         col.setPrefWidth(150); // Reasonable preferred width
         col.setMaxWidth(150);  // Reasonable max width
         return col;
